--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Chess - Game</title>
     <meta charset="UTF-8">
+    <meta name="viewport">
     <script type="text/javascript" src="js/script.js"></script>
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
